crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__onepassword_get_batch_fetches_legacy_items_with_bounded_workers.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
item list --vault Development --format json
item get id-broken --vault Development --format json
item get id-stored-item --vault Development --format json
