crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__onepassword_get_falls_back_to_id_lookup_when_title_is_ambiguous.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
item get monosecret/proj/default/DUPLICATE_ITEM --vault Development --format json
item list --vault Development --format json
item get id-duplicate --vault Development --format json
