crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__onepassword_get_with_request_all_calls.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: "fs::read_to_string(&log).unwrap()"
---
item get dotfiles --vault Development --format json
item get dotfiles --vault Development --format json
item get missing-item --vault Development --format json
