crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__onepassword_get_with_request_initial_calls.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
item get dotfiles --vault Development --format json
