crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__onepassword_get_with_request_uses_key_hint_when_path_is_absent_or_empty.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
item get monosecret/proj/default/STORED_ITEM --vault Private --format json
item get monosecret/proj/default/STORED_ITEM --vault Private --format json
