crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__onepassword_set_with_request_uses_key_hint_for_legacy_storage.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
item list --vault Development --format json
item create --vault Development -
{"title":"monosecret/dotfiles/default/STORED_ITEM","category":"SECURE_NOTE","fields":[{"label":"project","type":"STRING","value":"dotfiles"},{"label":"key","type":"STRING","value":"STORED_ITEM"},{"label":"value","type":"STRING","value":"new-token"}],"tags":["automated","dotfiles"]}
