crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__op_command_auth_failure_returns_helpful_error.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: err.to_string()
---
Provider operation failed: OnePassword authentication required.

Recommended: enable desktop integration in the 1Password app under
  Settings → Developer → "Integrate with 1Password CLI", then unlock the app.

Alternatives:
  - Service account (CI): set OP_SERVICE_ACCOUNT_TOKEN or use the onepassword+token:// or op+token:// scheme
  - Manual signin: run 'eval $(op signin)' (session expires after 30 minutes of inactivity)
