crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__op_get_with_request_propagates_non_missing_errors.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: err.to_string()
---
Provider operation failed: permission denied
