crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__op_get_with_request_reads_native_reference.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
read op://Development/dotfiles/forges/GITHUB_TOKEN
