crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__op_get_without_item_path_returns_none_and_set_errors.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: err.to_string()
---
Provider operation failed: Native 1Password provider requires an item path before the field name
