crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__op_get_without_request_reads_native_reference_from_uri_base.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
read op://Development/dotfiles/GITHUB_TOKEN
read op://Development/dotfiles/GITHUB_TOKEN
item edit dotfiles --vault Development GITHUB_TOKEN[concealed]=new-token
read op://Development/dotfiles/GITHUB_TOKEN
read op://Development/dotfiles/MISSING
