crates/monosecret/src/provider/snapshots/monosecret__provider__onepassword__native_and_batch_tests__op_set_with_request_edits_existing_native_reference.snap
---
source: crates/monosecret/src/provider/onepassword.rs
expression: calls
---
read op://Development/dotfiles/forges/GITHUB_TOKEN
item edit dotfiles --vault Development forges.GITHUB_TOKEN[concealed]=new-token
